# generate_faiss_knn

./: .gitignore  .justfile  CMakeLists.txt  Cargo.toml  common.cc  common.h  generate_sift.sh  gt.cc  main.cc  main_autotune.cc  main_selected.cc  run.nu  run_deep.nu  run_deep_100m.nu  run_deep_10m.nu
scripts/: datasets.nu  generate_cut.nu  mod.nu
src/: cpp.cc  lib.rs  main.rs  read_fvecs.rs
